@@ -59,8 +59,8 @@ libspectrum_plusd_read( libspectrum_snap *snap, const libspectrum_byte *buffer,
   libspectrum_snap_set_de ( snap, buffer[12] + buffer[13] * 0x100 );
   libspectrum_snap_set_bc ( snap, buffer[14] + buffer[15] * 0x100 );
   libspectrum_snap_set_hl ( snap, buffer[16] + buffer[17] * 0x100 );
-  i = buffer[18]; libspectrum_snap_set_i( snap, i );
-  /* Header offset 19 is 'rubbish' */
+  /* Header offset 18 is 'rubbish' */
+  i = buffer[19]; libspectrum_snap_set_i( snap, i );
   sp = buffer[20] + buffer[21] * 0x100;
 
   /* Make a guess at the interrupt mode depending on what I was set to */
@@ -81,12 +81,12 @@ libspectrum_plusd_read( libspectrum_snap *snap, const libspectrum_byte *buffer,
   /* R, IFF, AF and PC are stored on the stack */
   ptr = &buffer[ sp - 0x4000 ];
 
-  libspectrum_snap_set_r   ( snap, ptr[0] );
-  iff = ptr[1] & 0x04;
+  iff = ptr[0] & 0x04;
+  libspectrum_snap_set_r   ( snap, ptr[1] );
   libspectrum_snap_set_iff1( snap, iff );
   libspectrum_snap_set_iff2( snap, iff );
-  libspectrum_snap_set_a   ( snap, ptr[2] );
-  libspectrum_snap_set_f   ( snap, ptr[3] );
+  libspectrum_snap_set_f   ( snap, ptr[2] );
+  libspectrum_snap_set_a   ( snap, ptr[3] );
   libspectrum_snap_set_pc  ( snap, ptr[4] + ptr[5] * 0x100 );
 
   /* Store SP + 6 to account for those unstacked values */
